--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
       name="description"
       content="Viewer for Reddit. View posts from subreddits and user profiles in a multi-column layout. Enjoy infinite scrolling of NSFW photos and videos from Reddit."
     />
-    <meta name="keywords" content="reddit, nsfw, viewer, gallery, photos, videos, reddgallery, infinite scrolling" />
-    <meta property="og:title" content="reddgallery - Viewer for NSFW photos and videos from Reddit" />
+    <meta name="keywords" content="reddit, nsfw, viewer, gallery, photos, videos, twiix, infinite scrolling" />
+    <meta property="og:title" content="twiix - Viewer for NSFW photos and videos from Reddit" />
     <meta property="og:description" content="Viewer for Reddit. View posts from subreddits and user profiles in a multi-column layout. Enjoy infinite scrolling of NSFW photos and videos from Reddit." />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="reddgallery - Viewer for NSFW photos and videos from Reddit" />
+    <meta name="twitter:title" content="twiix - Viewer for NSFW photos and videos from Reddit" />
     <meta name="twitter:description" content="Viewer for Reddit. View posts from subreddits and user profiles in a multi-column layout. Enjoy infinite scrolling of NSFW photos and videos from Reddit." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>reddgallery - Viewer for NSFW photos and videos from Reddit</title>
+    <title>twiix - Viewer for NSFW photos and videos from Reddit</title>
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XEWQPPJHL1"></script>
